# tauri-app-

./: package-lock.json  package.json
src-tauri/: Cargo.toml
