[package]
name = "tauri-app-vue"
version = "1.0.1"
description = "A Tauri App"
authors = ["tangsong0202@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Linuxpizi/tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
